--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jupiter.version>5.9.0</jupiter.version>
         <selenium.version>3.141.59</selenium.version>
+        <allure.version>2.17.2</allure.version>
+        <aspectj.version>1.9.7</aspectj.version>
     </properties>
 
     <dependencies>
@@ -41,6 +43,17 @@
             <version>3.23.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit5</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
+
 
     </dependencies>
 
@@ -54,6 +67,37 @@
             <target>15</target>
           </configuration>
         </plugin>
+          <plugin>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.22.2</version>
+              <configuration>
+                  <testFailureIgnore>false</testFailureIgnore>
+                  <argLine>
+                      -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                  </argLine>
+                  <systemProperties>
+                      <property>
+                          <name>junit.jupiter.extensions.autodetection.enabled</name>
+                          <value>true</value>
+                      </property>
+                  </systemProperties>
+              </configuration>
+              <dependencies>
+                  <dependency>
+                      <groupId>org.aspectj</groupId>
+                      <artifactId>aspectjweaver</artifactId>
+                      <version>${aspectj.version}</version>
+                  </dependency>
+              </dependencies>
+          </plugin>
+          <plugin>
+              <groupId>io.qameta.allure</groupId>
+              <artifactId>allure-maven</artifactId>
+              <version>2.11.2</version>
+              <configuration>
+                  <reportVersion>${allure.version}</reportVersion>
+              </configuration>
+          </plugin>
       </plugins>
     </build>
 </project>
