--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jupiter.version>5.9.0</jupiter.version>
-        <allure.version>2.17.2</allure.version>
+        <allure.version>2.19.0</allure.version>
         <aspectj.version>1.9.7</aspectj.version>
         <selenide.version>6.7.2</selenide.version>
+        <rest-assured.version>5.1.1</rest-assured.version>
     </properties>
 
     <dependencies>
@@ -56,6 +57,16 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-selenide</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-rest-assured</artifactId>
             <version>${allure.version}</version>
         </dependency>
 
