--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <jupiter.version>5.9.0</jupiter.version>
         <allure.version>2.19.0</allure.version>
         <aspectj.version>1.9.7</aspectj.version>
-        <selenide.version>6.7.2</selenide.version>
+        <selenide.version>6.7.3</selenide.version>
         <rest-assured.version>5.1.1</rest-assured.version>
     </properties>
 
@@ -68,6 +68,18 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-rest-assured</artifactId>
             <version>${allure.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.0</version>
         </dependency>
 
 
