--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>org.example</groupId>
     <artifactId>crm-edu-at</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>connection-database-ways</module>
+    </modules>
 
     <name>crm-edu-at</name>
 
